--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.speedtester">
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,8 +13,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".showApDetails"></activity>
         <activity android:name=".ssidActivity" />
-        <activity android:name=".towerALevelsActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".TowerActivity" />
+        <activity android:name=".BuildingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
