added login layouts, started on graphs for ap details

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation 'com.chaos.view:pinview:1.4.3'
+    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
