--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.speedtester">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:hardwareAccelerated="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".showApDetails"></activity>
-        <activity android:name=".ssidActivity" />
-        <activity android:name=".TowerActivity" />
-        <activity android:name=".BuildingActivity">
+        <activity android:name=".homePageActivity">
+
+        </activity>
+        <activity android:name=".verifyActivity" />
+        <activity android:name=".phoneOTPactivity" />
+        <activity android:name=".registerActivity" />
+        <activity android:name=".loginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".showApDetails" />
+        <activity android:name=".ssidActivity" />
+        <activity android:name=".TowerActivity" />
+        <activity android:name=".BuildingActivity" />
     </application>
 
 </manifest>
